--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                     </div>
                 </div>
                 <div class="container copyright">
-                    <p>&copy; <a href="indexpage.html">Daniel Develops</a>, All Right Reserved | 
+                    <p>&copy; <a href="https://danielcommits.github.io/MyPortfolio/">Daniel Develops</a>, All Right Reserved | 
 					
 					<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                     Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
