--- a/index.html
+++ b/index.html
@@ -384,11 +384,9 @@
                             <p>omoaredaniel@gmail.com</p>
                         </div>
                         <div class="footer-social">
-                            <a href=""><i class="fab fa-twitter"></i></a>
-                            <a href=""><i class="fab fa-facebook-f"></i></a>
-                            <a href=""><i class="fab fa-youtube"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
-                            <a href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://x.com/Thatmaverickk"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/thebigdan_"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/omoare-daniel-663411304"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
