Added Formspree fgor contact

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-4"></div>
                         <div class="col-md-8">
-                            <div class="contact-form">
+                            <div class="contact-form" action="https://formspree.io/f/xyzgzozz" method="POST">
                                 <div id="success"></div>
                                 <form name="sentMessage" id="contactForm" novalidate="novalidate">
                                     <div class="control-group">
