--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@
                     <div class="row align-items-center">
                         <div class="col-md-4"></div>
                         <div class="col-md-8">
-                            <div class="contact-form" action="https://formspree.io/f/xyzgzozz" method="POST">
+                            <div class="contact-form" >
                                 <div id="success"></div>
-                                <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                                <form name="sentMessage" id="contactForm" novalidate="novalidate" action="https://formspree.io/f/xyzgzozz" method="POST">
                                     <div class="control-group">
                                         <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
                                         <p class="help-block"></p>
