--- a/index.html
+++ b/index.html
@@ -341,27 +341,28 @@
                         <div class="col-md-8">
                             <div class="contact-form" >
                                 <div id="success"></div>
-                                <form name="sentMessage" id="contactForm" novalidate="novalidate" action="https://formspree.io/f/xyzgzozz" method="POST">
+                                <form id="contactForm" action="https://formspree.io/f/xyzgzozz" method="POST">
                                     <div class="control-group">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
-                                        <p class="help-block"></p>
+                                      <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required />
+                                      <p class="help-block"></p>
                                     </div>
                                     <div class="control-group">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
-                                        <p class="help-block"></p>
+                                      <input type="email" class="form-control" id="email" name="email" placeholder="Your Email" required />
+                                      <p class="help-block"></p>
                                     </div>
                                     <div class="control-group">
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
-                                        <p class="help-block"></p>
+                                      <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required />
+                                      <p class="help-block"></p>
                                     </div>
                                     <div class="control-group">
-                                        <textarea class="form-control" id="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
-                                        <p class="help-block"></p>
+                                      <textarea class="form-control" id="message" name="message" placeholder="Message" required></textarea>
+                                      <p class="help-block"></p>
                                     </div>
                                     <div>
-                                        <button class="btn" type="submit" id="sendMessageButton">Send Message</button>
+                                      <button class="btn" type="submit" id="sendMessageButton">Send Message</button>
                                     </div>
-                                </form>
+                                  </form>
+                                  
                             </div>
                         </div>
                     </div>
