--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
-                <a href="indexpage.html" class="navbar-brand">Dan Devs</a>
+                <a href="index.html" class="navbar-brand">Dan Devs</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
