--- a/index.html
+++ b/index.html
@@ -407,6 +407,8 @@
                   name="sentMessage"
                   id="contactForm"
                   novalidate="novalidate"
+                  action="/mail/contact.php"
+                  method="POST"
                 >
                   <div class="control-group">
                     <input
@@ -513,7 +515,7 @@
     </div>
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
